Visible and hidden classes, fixed width row

--- a/css/init/layout.css
+++ b/css/init/layout.css
@@ -116,7 +116,19 @@
   margin-left: var(--ml11);
 }
 
+.container > .row > .visible {
+  display: inline-block;
+}
+.container > .row > .hidden {
+  display: none;
+}
+
 @media (min-width: 575px) {
+  .container > .row {
+    width: 540px;
+    margin-left: calc(50% - 270px);
+    margin-right: calc(50% - 270px);
+  }
   .container > .row > .col-sm-1 {
     width: var(--col1);
   }
@@ -187,9 +199,21 @@
   .container > .row > .ml-sm-11 {
     margin-left: var(--ml11);
   }
+
+  .container > .row > .visible-sm {
+    display: inline-block;
+  }
+  .container > .row > .hidden-sm {
+    display: none;
+  }
 }
 
 @media (min-width: 767px) {
+  .container > .row {
+    width: 720px;
+    margin-left: calc(50% - 360px);
+    margin-right: calc(50% - 360px);
+  }
   .container > .row > .col-md-1 {
     width: var(--col1);
   }
@@ -260,9 +284,21 @@
   .container > .row > .ml-md-11 {
     margin-left: var(--ml11);
   }
+
+  .container > .row > .visible-md {
+    display: inline-block;
+  }
+  .container > .row > .hidden-md {
+    display: none;
+  }
 }
 
 @media (min-width: 991px) {
+  .container > .row {
+    width: 960px;
+    margin-left: calc(50% - 480px);
+    margin-right: calc(50% - 480px);
+  }
   .container > .row > .col-lg-1 {
     width: var(--col1);
   }
@@ -333,9 +369,21 @@
   .container > .row > .ml-lg-11 {
     margin-left: var(--ml11);
   }
+
+  .container > .row > .visible-lg {
+    display: inline-block;
+  }
+  .container > .row > .hidden-lg {
+    display: none;
+  }
 }
 
 @media (min-width: 1199px) {
+  .container > .row {
+    width: 1140px;
+    margin-left: calc(50% - 570px);
+    margin-right: calc(50% - 570px);
+  }
   .container > .row > .col-xl-1 {
     width: var(--col1);
   }
@@ -406,9 +454,21 @@
   .container > .row > .ml-xl-11 {
     margin-left: var(--ml11);
   }
+
+  .container > .row > .visible-xl {
+    display: inline-block;
+  }
+  .container > .row > .hidden-xl {
+    display: none;
+  }
 }
 
 @media (min-width: 1399px) {
+  .container > .row {
+    width: 1320px;
+    margin-left: calc(50% - 660px);
+    margin-right: calc(50% - 660px);
+  }
   .container > .row > .col-xxl-1 {
     width: var(--col1);
   }
@@ -478,5 +538,12 @@
   }
   .container > .row > .ml-xxl-11 {
     margin-left: var(--ml11);
+  }
+
+  .container > .row > .visible-xxl {
+    display: inline-block;
+  }
+  .container > .row > .hidden-xxl {
+    display: none;
   }
 }
